# Synchronous-coding

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: BoardManager.cpp  BoardManager.h  DatabaseConnector.cpp  DatabaseConnector.h  MessageHandler.cpp  MessageHandler.h  SharedDocument.cpp  SharedDocument.h  main.cpp
web/: editor.html  index.html  login_script.js  login_styles.css  script.js  styles.css
